add extra scss partials for input and navbar add input component add navbar compoenent add style - WIP

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -4,18 +4,8 @@
 }
 
 $black: #000;
-$off-black: #202020;
-$dark-grey: #6e6e6e;
-$mid-grey: #909090;
-$mid-grey-2: #9C9B9B;
-$light-grey: #ddd;
-$off-white: #f7f7f7;
 $white: #fff;
-$crimson: #e71b14;
-$teal: #0B5028;
-$orange: #EF7003;
-$purple: #0C1899;
-$orchid: #7D32C1;
+$blue-crayola: #008DD5;
 
 // Font Size
 $font-size-8: rem-calc(8);
