add styles for router, view pages style search input and button

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -6,6 +6,9 @@
 $black: #000;
 $white: #fff;
 $blue-crayola: #008DD5;
+$platinum: #E5E5E5;
+$dark-grey: #6e6e6e;
+$purple: #6200ee;
 
 // Font Size
 $font-size-8: rem-calc(8);
