--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,8 +2,11 @@
 @import 'vars.scss';
 @import 'breakpoints.scss';
 @import 'mixins.scss';
+@import 'router.scss';
 @import 'components/_input.scss';
 @import 'components/_navbar.scss';
+@import 'components/_button.scss';
+@import 'views/_home.scss';
 
 
 * { margin: 0; padding: 0; }
