--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -2,12 +2,15 @@
   @include flex-row;
   align-items: center;
   height: 60px;
-  background-color: $blue-crayola;
+  background-color: $purple;
   color: $white;
   justify-content: flex-start;
 }
 
 .navbar-title {
   margin-left: 40px;
-
+  font-size: $font-size-16;
+  @include sm {
+    font-size: $font-size-20;
+  }
 }
