add card component style card component add scss files refactor styles to enforce responsiveness

--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -26,6 +26,13 @@
   }
 }
 
+// Extra extra large devices
+@mixin xxl {
+  @media (min-width: #{$screen-xxl-min}) {
+      @content;
+  }
+}
+
 @mixin flex-row {
   display: flex;
   flex-direction: row;
