--- a/src/assets/scss/views/_home.scss
+++ b/src/assets/scss/views/_home.scss
@@ -1,13 +1,40 @@
+.home-container {
+  @include flex-col;
+  justify-content: center;
+  @include lg {
+    align-items: center;
+  }
+}
+
 .home-input-button {
   @include flex-col;
   align-items: center;
   justify-content: center;
   height: 200px;
+  width: 100%;
 
   @include sm {
     @include flex-row;
-    align-items: center;
-    justify-content: center;
-    height: 200px;
+    margin-right: 90px;
+  }
+  @include xxl {
+    width: 43%;
+  }
+}
+
+.github-profile-cards-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  @include md {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 14px;
+  }
+  @include xl {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @include xxl {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
