--- a/src/assets/scss/_breakpoints.scss
+++ b/src/assets/scss/_breakpoints.scss
@@ -1,7 +1,3 @@
-/*********************
-BREAKPOINTS
-*********************/
-
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 576px;
 
@@ -11,5 +7,8 @@ $screen-md-min: 768px;
 // Tablets and small desktops
 $screen-lg-min: 992px;
 
-// Large tablets and desktops
-$screen-xl-min: 1200px;
+// Large tablets and laptops
+$screen-xl-min: 1400px;
+
+// Desktop
+$screen-xxl-min: 1800px;
