--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,14 +1,16 @@
-@function rem-calc($size) {
-    $remSize: $size / 16;
-    @return #{$remSize}rem;
-}
-
+// Colors 
 $black: #000;
 $white: #fff;
 $blue-crayola: #008DD5;
 $platinum: #E5E5E5;
 $dark-grey: #6e6e6e;
 $purple: #6200ee;
+
+// Function to convert px to rem
+@function rem-calc($size) {
+    $remSize: $size / 16;
+    @return #{$remSize}rem;
+}
 
 // Font Size
 $font-size-8: rem-calc(8);
