--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,6 +6,7 @@
 @import 'components/_input.scss';
 @import 'components/_navbar.scss';
 @import 'components/_button.scss';
+@import 'components/_profile-card.scss';
 @import 'views/_home.scss';
 
 
