--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -2,6 +2,12 @@
   width: 400px;
   max-width: 80%;
   height: 45px;
+  @include lg {
+    width: 500px;
+  }
+  @include xl {
+    width: 600px;
+  }
 }
 
 .mdc-floating-label {
