--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -7,6 +7,7 @@
 @import 'components/_navbar.scss';
 @import 'components/_button.scss';
 @import 'components/_profile-card.scss';
+@import 'components/_notification.scss';
 @import 'views/_home.scss';
 
 
