modify readme to change the description of the project refactor where github finder is being used in the project

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -4,6 +4,7 @@ $white: #fff;
 $blue-crayola: #008DD5;
 $platinum: #E5E5E5;
 $dark-grey: #6e6e6e;
+$off-white: #f7f7f7;
 $purple: #6200ee;
 
 // Function to convert px to rem
