--- a/src/assets/scss/components/_notification.scss
+++ b/src/assets/scss/components/_notification.scss
@@ -9,7 +9,7 @@
   margin-top: 10px;
   margin-bottom: 0;
   @include xl {
-    width: 95% !important;
+    width: 95%;
   }
 }
 .mdc-alert__close-button {
