--- a/src/assets/scss/views/_home.scss
+++ b/src/assets/scss/views/_home.scss
@@ -26,19 +26,19 @@
   }
 }
 
-.github-profile-cards-container {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  @include md {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-row-gap: 14px;
-  }
-  @include xl {
-    grid-template-columns: repeat(3, 1fr);
-  }
-  @include xxl {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
+// .github-profile-cards-container {
+//   display: flex;
+//   align-items: center;
+//   flex-direction: column;
+//   @include md {
+//     display: grid;
+//     grid-template-columns: repeat(2, 1fr);
+//     grid-row-gap: 14px;
+//   }
+//   @include xl {
+//     grid-template-columns: repeat(3, 1fr);
+//   }
+//   @include xxl {
+//     grid-template-columns: repeat(4, 1fr);
+//   }
+// }
