refactor repo card change general style from purple to dark grey refactor code to be cleaner

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -3,8 +3,8 @@ $black: #000;
 $white: #fff;
 $blue-crayola: #008DD5;
 $platinum: #E5E5E5;
-$dark-grey: #6e6e6e;
-$off-white: #f7f7f7;
+$dark-grey: #333333;
+$light-grey: #d4d4d4;
 $purple: #6200ee;
 
 // Function to convert px to rem
