--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,7 +6,7 @@
 @import 'components/_input.scss';
 @import 'components/_navbar.scss';
 @import 'components/_button.scss';
-@import 'components/_repo-list.scss';
+@import 'components/_repo-card.scss';
 @import 'components/_notification.scss';
 @import 'views/_home.scss';
 
