--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -2,15 +2,24 @@
   @include flex-row;
   align-items: center;
   height: 60px;
-  background-color: $purple;
+  background-color: $dark-grey;
   color: $white;
-  justify-content: flex-start;
+  justify-content: space-evenly;
+  @include lg {
+    justify-content: space-around;
+  }
+  @include xl {
+    justify-content: space-evenly;
+  }
 }
 
 .navbar-title {
-  margin-left: 42px;
-  font-size: $font-size-16;
+  font-size: $font-size-14;
+  font-weight: bold;
   @include sm {
+    font-size: $font-size-18;
+  }
+  @include md {
     font-size: $font-size-20;
   }
 }
