--- a/src/assets/scss/components/_notification.scss
+++ b/src/assets/scss/components/_notification.scss
@@ -4,6 +4,10 @@
   width: 100%;
 }
 
+.mdc-alert.mdc-alert--error {
+  position: absolute;
+}
+
 .alert {
   width: 90%;
   margin-top: 10px;
@@ -16,7 +20,7 @@
   cursor: pointer;
   font-size: $font-size-20;
   font-weight: 100;
-  color: $black;
+  color: $dark-grey;
 }
 
 .md-error-icon {
