add spinner component setup state, mutations,actions map component to vuex store delete axios api config file tweeks styles

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -3,11 +3,12 @@
 @import 'breakpoints.scss';
 @import 'mixins.scss';
 @import 'router.scss';
-@import 'components/_input.scss';
+@import 'components/_search-input.scss';
 @import 'components/_navbar.scss';
 @import 'components/_button.scss';
 @import 'components/_repo-card.scss';
 @import 'components/_notification.scss';
+@import 'components/_spinner.scss';
 @import 'views/_home.scss';
 
 
