disable button when input field is empty refactor pagnation component add logo to navbar and home page show welcome text or no result found text when a repository is not found tweek styles to match colors across website

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,6 +9,7 @@
 @import 'components/_repo-card.scss';
 @import 'components/_notification.scss';
 @import 'components/_spinner.scss';
+@import 'components/_pagination.scss';
 @import 'views/_home.scss';
 
 
