--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -13,6 +13,22 @@
   }
 }
 
+.navbar-link {
+  @include flex-row;
+  align-items: center;
+}
+
+.navbar-title {
+  display: none;
+  @include sm {
+    display: block;
+  }
+}
+.nav-logo {
+  width: 60px;
+  height: 60px;
+}
+
 .navbar-title {
   font-size: $font-size-14;
   font-weight: bold;
