--- a/src/assets/scss/components/_repo-card.scss
+++ b/src/assets/scss/components/_repo-card.scss
@@ -12,14 +12,15 @@
 }
 
 .demo-card-article {
-  padding: 16px;
+  padding: 18px;
   text-decoration: none;
   color: inherit;
 }
 
 .demo-card-article__title {
-  margin: 0 0 4px 0;
+  margin: 0 0 6px 0;
   color: $dark-grey;
+  word-break: break-all;
 }
 
 .demo-card-article__snippet {
