--- a/src/assets/scss/views/_home.scss
+++ b/src/assets/scss/views/_home.scss
@@ -13,3 +13,55 @@
   width: 100%;
   margin-top: 100px;
 }
+
+.github-repo-list {
+  @include flex-col;
+  width: 100%;
+  max-width: 100%;
+  align-items: center;
+}
+
+.display-message {
+  @include flex-col;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  width: 100%;
+  @include sm {
+    max-width: 70%;
+  }
+}
+
+.github-logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  margin: 0 auto 0 auto;
+  transform-origin: bottom;
+}
+
+.bounce {
+  animation-name: bounce;
+  animation-timing-function: ease;
+}
+@keyframes bounce {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-50px); }
+  100% { transform: translateY(0); }
+}
+
+.home-text {
+  @include flex-col;
+  margin-top: 10px;
+  align-items: center;
+  font-size: $font-size-16;
+  color: $dark-grey;
+  @include sm {
+    font-size: $font-size-20;
+  }
+  @include md {
+    font-size: $font-size-24;
+  }
+}
