setup useSwrCache state map home component to useSwrCache state

--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -8,6 +8,7 @@
   margin-left: 5px;
   margin-bottom: 3px;
   height: 32px;
+  cursor: pointer;
   @include sm {
     height: 40px;
     width: 100px;
