--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -1,6 +1,11 @@
 .navbar-container {
   @include flex-row;
+  position:fixed;
+  left:0;
+  top:0;
+  z-index: 99;
   align-items: center;
+  width: 100%;
   height: 60px;
   background-color: $dark-grey;
   color: $white;
