rename files and variable name to be self-explanatory added repository deplay page and map each repo card to navigate to a new page tweaks styles

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,7 +10,5 @@
 @import 'components/_notification.scss';
 @import 'components/_spinner.scss';
 @import 'components/_pagination.scss';
-@import 'views/_home.scss';
-
-
-* { margin: 0; padding: 0; }
+@import 'views/_repositories-page.scss';
+@import 'views/_repository-details-page.scss';
