--- a/src/assets/scss/_router.scss
+++ b/src/assets/scss/_router.scss
@@ -1,8 +1,14 @@
 .router-link-active {
   color: $white;
-  text-decoration: none;
+  text-decoration: none !important;
+
 
   &:hover {
     color: $platinum;
   }
+}
+
+.demo-card-article { 
+  width: 100%;
+  text-decoration: none;
 }
