--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -2,9 +2,14 @@
   @include flex-row;
   align-items: center;
   height: 60px;
+  width: 100%;
   background-color: $dark-grey;
   color: $white;
   justify-content: space-evenly;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
   @include lg {
     justify-content: space-around;
   }
@@ -16,14 +21,10 @@
 .navbar-link {
   @include flex-row;
   align-items: center;
+  color: inherit;
+  text-decoration: none;
 }
 
-.navbar-title {
-  display: none;
-  @include sm {
-    display: block;
-  }
-}
 .nav-logo {
   width: 60px;
   height: 60px;
