--- a/src/assets/scss/views/_repositories-page.scss
+++ b/src/assets/scss/views/_repositories-page.scss
@@ -11,13 +11,14 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 .github-repo-list {
   @include flex-col;
   width: 100%;
   max-width: 100%;
+  margin-top: 50px;
   align-items: center;
 }
 
@@ -33,13 +34,22 @@
 }
 
 .github-logo {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 50px;
   animation-duration: 2s;
   animation-iteration-count: infinite;
   margin: 0 auto 0 auto;
   transform-origin: bottom;
+  @include sm {
+    width: 100px;
+    height: 100px;
+  }
+  @include lg {
+    width: 120px;
+    height: 120px;
+    border-radius: 70px;
+  }
 }
 
 .bounce {
@@ -56,7 +66,7 @@
   @include flex-col;
   margin-top: 10px;
   align-items: center;
-  font-size: $font-size-16;
+  font-size: $font-size-14;
   color: $dark-grey;
   @include sm {
     font-size: $font-size-20;
