--- a/src/assets/scss/views/_repository-details-page.scss
+++ b/src/assets/scss/views/_repository-details-page.scss
@@ -8,6 +8,14 @@
   }
 }
 
+.repo-details-wrapper-0 {
+  @include flex-col;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 70px;
+}
+
 .repo-details-wrapper-1 {
   @include flex-col;
   justify-content: center;
@@ -20,6 +28,9 @@
     margin-bottom: 30px;
     width: 50%;
     height: 50vh;
+  }
+  @include lg {
+    height: 70vh;
   }
 }
 
