--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -6,6 +6,7 @@ $platinum: #E5E5E5;
 $dark-grey: #333333;
 $light-grey: #d4d4d4;
 $purple: #6200ee;
+$red: #e71b14;
 
 // Function to convert px to rem
 @function rem-calc($size) {
